--- a/style.css
+++ b/style.css
@@ -1,120 +1,221 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+:root {
+    --primario: #fff;
+    --fondo: #ffebf2; 
+    --fondo-sobre: #ffe3ed; 
+    --solapa-sobre: #ffccd5; 
+    --cuerpo-sobre: #ffc1d1; 
+    --sombra: rgba(0, 0, 0, 0.2);
+    --texto: #003049; 
+    --corazon: #ff477e; 
+}
+
 body {
-	background: #111;
-	background-attachment: fixed;
-	background-size: cover;
-  color: #f9f9f9;
+    background: var(--fondo);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    height: 100vh;
 }
 
-
-:root{
-	--pink: #ff60b4;
-  --blue: #72efff; 
-}
-
- A {text-decoration: none;}
-
-#out-all {position: absolute; top: 0px; left: 0px; right: 0px; bottom: 0px; display: flex; align-items: center; justify-content: center;}
-
-#f1 {position: absolute; width: 600px; height: 400px; display: flex; align-items: center; justify-content: center; flex-direction: column; background: #111;}
-.decidir {display: flex; align-items: center; justify-content: center;}
-.si, .no, .weno, .dale, .salu, .copy, #f13 a, span.go, .carta {font: 25px 'VT323', monospace; margin: 10px; opacity: 0;
-   animation-name: visible;
-  animation-duration: 1s; 
-animation-delay: 3.5s;
-    animation-fill-mode: forwards; cursor: pointer; color: #f9f9f9;
-}
-
-.rega, .ojo, .afi, .anillo, .marry, .meme, .meme2, .yes {font: 25px 'VT323', monospace; margin: 10px; opacity: 0;
-   animation-name: visible;
-  animation-duration: 1s; 
-animation-delay: 7s;
-    animation-fill-mode: forwards; cursor: pointer; text-align: center;
-}
-
-#f2, #f3, #f4, #f5, #f6 {position: absolute; width: 600px; height: 400px; display: flex; align-items: center; justify-content: center; flex-direction: column; display: none;} 
-
-#f7 {position: absolute; width: 850px; height: 550px; background: url(https://i.imgur.com/kx3psEN.png); background-size: cover; display: none; align-items: center; justify-content: center; flex-direction: column;}
-
-#f8, #f9 {position: absolute; bottom: 150px; left: 150px; right: 150px; display: none; align-items: center; justify-content: center; flex-direction: column;}
-
-#f10 {position: absolute; bottom: 140px; left: 150px; right: 150px; height: 160px; display: none; align-items: center; justify-content: center;}
-.box {width: 100px; height: 100px; background: url(https://i.imgur.com/ViqP2fB.png); background-size: cover; margin: 20px; cursor: pointer;}
-.box:hover {background: url(https://i.imgur.com/FIrcwmM.png); background-size: cover;}
-
-#f11 {position: absolute; position: absolute; top:120px; transform: scale(.7); display: none; flex-direction: column;}
-
-#f12 {position: absolute; top: 0px; bottom: 0px; right: 0px; left: 0px; background: #111; display: none; align-items: center; justify-content: center; flex-direction: column;}
-
-#f14 { background: #111; position: absolute; top: 0px; right: 0px; bottom: 0px; left: 0px;
-font: 26px 'VT323', monospace; text-align:justify; display: none;}
-#f15 { background: #111; position: absolute; top: 0px; right: 0px; bottom: 0px; left: 0px;
-font: 26px 'VT323', monospace; text-align:justify; display: none;}
-#f16 {position: absolute; top: 0px; right: 0px; left: 0px; bottom: 0px; display: none; align-items: center; justify-content: center; flex-direction: column;}
-
-#f17 {position: absolute; top: 0px; right: 0px; bottom: 0px; left: 0px; display: none; align-items: center; justify-content: center; flex-direction: column;}
-.ring {width: 150px; height: 150px;  background: url(https://i.imgur.com/oEs8TdL.png); background-size: cover;}
-.ichigo {width: 200px; height: 200px; background: url(https://i.imgur.com/hGY3pGX.png); background-size: cover;}
-
-#f18 {position: absolute; top: 0px; bottom: 0px; right: 0px; left: 0px; background: #111; display: none;}
-#f19, #f20, #f21, #f22 {position: absolute; top: 0px; bottom: 0px; right: 0px; left: 0px; background: #111; display: none; align-items: center; justify-content: center; flex-direction: column;}
-#f22 { 
-font: 26px 'VT323', monospace; text-align:justify;}
 h1 {
-  overflow: hidden; 
-  border-right: .15em solid #fff; 
-  color: #fff;
-  white-space: nowrap;  
-  margin: 0 auto; 
-  letter-spacing: .03em; 
-  animation: 
-    typing 3.5s steps(40, end),
-    blink-caret .75s step-end infinite;
-  font: 30px 'VT323', monospace;
-}
-h3 {
-  overflow: hidden; 
-  border-right: .15em solid transparent; 
-  color: #fff;
-  white-space: nowrap;  
-  margin: 0 auto; 
-  letter-spacing: .03em; 
-  animation: 
-    typing 3.5s steps(40, end),
-    blink-caret .75s step-start;
-  font: 30px 'VT323', monospace;
+    font-family: "Marck Script", serif; 
+    text-align: center;
+    font-size: 60px;
+    margin-bottom: 50px;
+    color: #444;
 }
 
-
-h2 {
-  overflow: hidden; 
-  border-right: .15em solid transparent; 
-  color: #fff;
-  white-space: nowrap;  
-  margin: 0 auto; 
-  letter-spacing: .03em; 
-  animation: 
-    typing 3.5s steps(40, end),
-    blink-caret .75s step-end infinite;
-  font: 30px 'VT323', monospace;
-  animation-delay: 3.5s; width: 0px; animation-fill-mode: forwards; text-align: center;
+.contenedor {
+    width: 400px;
 }
 
-.img1 {width: 150px; height: 150px; background: url(https://i.imgur.com/QLrOZMR.png); background-size: cover;}
-
-#ico {position: absolute; bottom: 5px; left: 360px; width: 130px; height: 130px; background: url(https://i.imgur.com/SVZxE8c.png); background-size: 100%;}
-/* The typing effect */
-@keyframes typing {
-  from { width: 0 }
-  to { width: 105% }
+.envoltura-sobre {
+    position: relative;
+    background-color: var(--fondo-sobre);
+    box-shadow: 0 0 40px var(--sombra);
+    border-radius: 15px;
 }
 
-@keyframes visible {
-  from { opacity: 0 }
-  to { opacity: 1 }
+.sobre {
+    position: relative;
+    width: 400px;
+    height: 300px;
 }
 
-/* The typewriter cursor effect */
-@keyframes blink-caret {
-  from, to { border-color: transparent }
-  50% { border-color: #fff }
+.sobre::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 4;
+    border-top: 180px solid var(--solapa-sobre);
+    border-right: 200px solid transparent;
+    border-left: 200px solid transparent;
+    transform-origin: top;
+    transition: all 0.5s ease-in-out 0.7s;
+    border-radius: 10px;
+}
+
+.solapa-derecha {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    clip-path: polygon(100% 0, 0 100%, 100% 100%);
+    background-color: var(--cuerpo-sobre);
+    border-bottom-right-radius: 10px;
+    border-top-right-radius: 10px;
+    border-bottom-left-radius: 10px;
+}
+
+.solapa-izquierda {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    clip-path: polygon(0 0, 0 100%, 100% 100%);
+    background-color: var(--cuerpo-sobre);
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+}
+
+.carta {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 100%;
+    background-color: var(--primario);
+    text-align: center;
+    box-shadow: 0 0 5px var(--sombra);
+    padding: 20px;
+    border-radius: 10px;
+    transition: transform .5s ease-in-out;
+}
+
+.contenido {
+    font-family: "Gill Sans", Calibri, sans-serif;
+    color: var(--texto);
+    text-align: left;
+    font-size: 12px;
+    border: 3px dotted var(--texto);
+    padding: 10px;
+    height: 100%;
+    line-height: 14px;
+    cursor: pointer;
+    overflow-Y: scroll;
+}
+
+.corazon {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 30px;
+    height: 30px;
+    background-color: var(--corazon);
+    transform: translate(-50%,0) rotate(45deg);
+    transition: transform 0.5s ease-in-out 1s;
+    z-index: 999;
+    cursor: pointer;
+}
+
+.corazon::before,
+.corazon::after {
+    content: "";
+    position: absolute;
+    width: 30px;
+    height: 30px;
+    background-color: var(--corazon);
+    border-radius: 100%;
+
+}
+
+.corazon:before {
+    top: -15px;
+}
+
+.corazon:after {
+    right: 15px;
+}
+
+/*Agregar clases dinamicos*/
+.abierto .sobre::before {
+    transform: rotateX(180deg);
+    z-index: 0;
+}
+
+.abierto .corazon {
+    transform: rotate(90deg);
+    transition-delay: 0.4s;
+}
+
+.carta.mostrar-carta {
+    transform: translateY(-290px);
+    transition: transform .5s ease-in-out;
+}
+
+.carta.cerrando-carta {
+    transform: translateY(-290px);
+    transition: transform .5s ease-in-out;
+}
+
+.carta.abierta {
+    z-index: 10000;
+}
+
+.envoltura-sobre.desactivar-sobre .sobre::before {
+    pointer-events: none;
+}
+
+/*Scroll personalizado*/
+
+/*
+::-webkit-scrollbar {
+    width: 8px;
+}
+
+::-webkit-scrollbar-track {
+    background-color: transparent;
+}
+
+
+::-webkit-scrollbar-thumb {
+    background-color: var(--cuerpo-sobre);
+    border-radius: 4px;
+}
+
+
+::-webkit-scrollbar-thumb:hover {
+    background-color: var(--corazon);
+}
+*/
+
+/*Vista celular*/
+
+@media screen and (max-width:400px) {
+    .contenedor {
+        width: 300px;
+    }
+
+    .sobre {
+        width: 300px;
+        height: 250px;
+    }
+
+    .sobre::before {
+        border-top:150px solid var(--solapa-sobre) ;
+        border-right: 150px solid transparent;
+        border-left: 150px solid transparent;
+    }
+
 }
